* Add methods $().$x and $().$$x -- thanks to Oleksii Cherevatyi 
* Fix support for Opera driver -- thanks to Roman Marinsky
* Remove spam from logs: `INFO: Close proxy server: 24 -> null` -- thanks to Andrew Zakordonets 
* upgrade to org.littleshoot:littleproxy:1.1.2
* upgrade to phantomjsdriver 1.4.3
* added many unit tests for Selenide itself -- thanks to Andrew Zakordonets

=== 4.4.3 (released 25.04.2017)
* upgrade to selenium-java 3.4.0

=== 4.4.2 (released 30.03.2017)
* #510 fix closing windows in `$.download()`

=== 4.4.1 (released 28.03.2017)
* Add workaround for invalid resolving of `selenium-api` dependency by Maven

=== 4.4 (released 27.03.2017)
* #479 Added methods `clearBrowserCookies()` and `clearBrowserLocalStorage()`
* #497 Added methods `$x("//div")`, `$$x("//div")` for finding elements by xpath 
* #457 fix performance degradation in parallel tests
* #494 fix $.toString() on Android driver
* upgrade to selenium-java 3.3.1
* upgrade to phantomjsdriver 1.4.1
* Upgrade to htmlunit 2.24

=== 4.3 (Released 09.02.2017)
* System properties names aligned with Configuration fields. e.g. Configuration.someProp always has selenide.someProp equivalent (old names still supported for backward compatibility)
* JavaDocs are fixed - now it is more clear that $,$$,find,etc. methods don't start the search
* deprecated Selenide.selectRadio (for SelenideElement.selectRadio)
* upgrade to browsermob-core:2.1.4
* upgrade to org.apache.httpcomponents:httpcore:4.4.6
* upgrade to guava:21.0

=== 4.2.1 (Released in January 2017)
* fixed problems with int and boolean capability values, now converting automatically
* added support for FirefoxProfile over commandline (-Dfirefoxprofile.<option>=<value>,
* added support for ChromeOptions (args only) over commandline (-Dchromeoptions.args=<value1>,<value2>...)
* #426 fix error reporting in method `$$().find()`    - see https://github.com/codeborne/selenide/pull/426