@@ -28,7 +28,8 @@ import static java.util.Arrays.asList;
 class SelenideElementProxy implements InvocationHandler {
   private static final Set<String> methodsToSkipLogging = new HashSet<>(asList(
       "toWebElement",
-      "toString"
+      "toString",
+      "getSearchCriteria"
   ));
 
   private static final Set<String> methodsForSoftAssertion = new HashSet<>(asList(
