@@ -9,6 +9,7 @@
 * upgrade to org.littleshoot:littleproxy:1.1.2
 * upgrade to phantomjsdriver 1.4.3
 * added many unit tests for Selenide itself -- thanks to Andrew Zakordonets
+# #484 added method $.getSearchCriteria()
 
 === 4.4.3 (released 25.04.2017)
 * upgrade to selenium-java 3.4.0
